Add professional info and export commands